# PicoCray

./: .gitignore  AGENTS.MD  AI.MD  CMakeLists.txt  DisplayConnections.txt  LICENSE.md  README.md  cray.c  pallette16.c  pallette213.c  touch.c
.github/: FUNDING.yml
gfx/: CMakeLists.txt  font.h  gfx.c  gfx.h  gfxfont.h
i2c_slave/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  i2c_slave.c
i2c_slave/i2c_slave/: Makefile  cmake_install.cmake
i2c_slave/include/: i2c_fifo.h  i2c_slave.h  i2c_slave.h~
ili9341/: CMakeLists.txt  README.md  ili9341.c  ili9341.h
picocray/: CMakeLists.txt  common.h  controller.c  controller_test.c  cray.c  cray.c~  pallette128.c  pallette16.c  pallette16b.c  pallette64.c  proc.c  touch.c
